--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2023 Kelas X TJKT 2. All rights reserved.</p>
-            <p>SMK TI Bali Global Karangasem</p>
+            <p>&copy; 2025 Kelas X TJKT 2. All rights reserved.</p>
+            <p>SMK TI Bali Global Karangasem © edimahendra</p>
         </div>
     </footer>
     
