--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 Kelas X TJKT 2.  All rights reserved.</p>
+            <p>&copy; Kelas X TJKT2.</p>
             <p>SMK TI Bali Global Karangasem 
-                © edimahendra</p>
+                ©Edimahendra</p>
         </div>
     </footer>
     
