--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <div class="position-card">
                     <h3><i class="fas fa-coins"></i> Bendahara</h3>
                     <p>Vina</p>
-                    <p>Fadli</p>
+                    <p>nayla</p>
                 </div>
                 
                 <div class="position-card">
@@ -354,7 +354,7 @@
                     <h3><i class="fas fa-cloud"></i> Kamis</h3>
                     <ul class="student-list">
                         <li>Fadli</li>
-                        <li>Ditnya</li>
+                        <li>Ditya</li>
                         <li>Juandi</li>
                         <li>Ikwan</li>
                     </ul>
